syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.defaults";
option java_multiple_files = true;

package enums;

enum PeriodType {
    WEEK = 0;
    MONTH = 1;
    YEAR = 2;
    ALL = 3;
}
